Sorted out data files

--- a/data/cobblemon/species/generation4/abomasnow.json
+++ b/data/cobblemon/species/generation4/abomasnow.json
@@ -210,29 +210,7 @@
     "tutor:worryseed"
   ],
   "preEvolution": "snover",
-  "evolutions": [
-    {
-      "id": "abomasnow_megaabomasnow",
-      "variant": "level_up",
-      "result": "abomasnow mega",
-      "consumeHeldItem": false,
-      "learnableMoves": [],
-      "requirements": [
-        {
-          "variant": "level",
-          "minLevel": "50"
-        },
-        {
-          "variant": "friendship",
-           "amount": 180
-        },
-        {
-          "variant": "held_item",
-          "itemCondition": "minecraft:nether_star"
-        }          
-      ]
-    }
-  ],
+  "evolutions": [],
   "forms": [
     {
       "name": "Mega",
@@ -266,21 +244,7 @@
       },
       "baseExperienceYield": 208,
       "dynamaxBlocked": true,
-      "evolutions": [
-        {
-          "id": "megaabomasnow_abomasnow",
-          "variant": "level_up",
-          "result": "abomasnow mega=false",
-          "consumeHeldItem": false,
-          "learnableMoves": [],
-          "requirements": [
-            {
-              "variant": "held_item",
-              "itemCondition": "minecraft:nether_star"
-            }
-          ]
-        }
-      ],
+      "evolutions": [],
       "battleOnly": false
     }
   ]
