--- a/assets/cobblemon/bedrock/pokemon/resolvers/0716_xerneas/0_xerneas_base.json
+++ b/assets/cobblemon/bedrock/pokemon/resolvers/0716_xerneas/0_xerneas_base.json
@@ -1,6 +1,6 @@
 {
   "species": "cobblemon:xerneas",
-  "order": 1,
+  "order": 0,
   "variations": [
     {
       "poser": "cobblemon:xerneas",
@@ -11,7 +11,7 @@
 					"name": "emissive",
           "emissive": true,
 					"texture": "cobblemon:textures/pokemon/0716_xerneas/xerneas_active_emissive.png"
-				  }
+		}
       ]
     },
     {
@@ -22,8 +22,22 @@
 					"name": "emissive",
           "emissive": true,
 					"texture": "cobblemon:textures/pokemon/0716_xerneas/xerneas_active_emissive.png"
-				  }
+		}
       ]
-    }
+    },
+    {
+      "aspects": ["neutral-mode"],		
+      "poser": "cobblemon:xerneas",
+      "model": "cobblemon:xerneas_neutral.geo",
+      "texture": "cobblemon:textures/pokemon/0716_xerneas/xerneas_neutral.png",
+      "layers": []
+    },
+    {
+      "aspects": ["shiny", "neutral-mode"],		
+      "poser": "cobblemon:xerneas",
+      "model": "cobblemon:xerneas_neutral.geo",
+      "texture": "cobblemon:textures/pokemon/0716_xerneas/xerneas_neutral_shiny.png",
+      "layers": []
+    }	
   ]
 }
